# CreateC

./: CMakeLists.txt  README.md  create.json
src/: createc.cpp  createc.h  main.cpp
